# chess_game_allegro

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prototype.h
sound/: ambiance.wma
src/: graphisme.c  jeux.c  main.c
